# r-u-still-there

./: .gitignore  Cargo.toml  Cross.toml  FONTS-LICENSE  RaspberryPi.md  ReadMe.md  build.sh  config_example.toml
debian/: changelog
package/unit-scripts/: r-u-still-there.service
src/: camera.rs  error.rs  image_buffer.rs  main.rs  moving_average.rs  pipeline.rs  recorded_data.rs  spmc.rs  temperature.rs  util.rs
src/camera/: i2c.rs  measurement.rs  mock_camera.rs  mod.rs  settings.rs  shared_camera.rs  thermal_camera.rs
src/mqtt/: client.rs  codec.rs  external_value.rs  home_assistant.rs  mod.rs  serialize.rs  settings.rs  state.rs  state_values.rs
src/mqtt/home_assistant/: common.rs  device.rs  internal.rs  mod.rs  sensor.rs  util.rs
src/occupancy/: bincode2text.py  datafiles-readme.md  gmm.rs  learning_rate.rs  mod.rs  moments.rs  point.rs  settings.rs  threshold.rs  tracker.rs
src/pipeline/: mod.rs  pipeline.rs
src/pubsub/: count_tree.rs  counted_stream.rs  mod.rs  permit.rs  spmc.rs  traits.rs
src/render/: background.rs  cheese.rs  color.rs  color_map.rs  font.rs  layer.rs  mod.rs  resize.rs  settings.rs  svg.rs
src/settings/: camera.rs  cli.rs  gradient.rs  i2c.rs  mod.rs  render.rs  stream.rs  tracker.rs
src/stream/: jpeg.rs  mjpeg.rs  mod.rs  permit_body.rs  settings.rs  video_stream.rs
src/util/: mod.rs  moving_average.rs  stream.rs
